--- a/InstaClone/Base.lproj/Main.storyboard
+++ b/InstaClone/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -114,21 +115,41 @@
             </objects>
             <point key="canvasLocation" x="2509" y="123"/>
         </scene>
-        <!--View Controller-->
+        <!--Действия-->
         <scene sceneID="FVC-Zx-eKP">
             <objects>
-                <viewController id="Fw5-z6-GhM" sceneMemberID="viewController">
+                <viewController id="Fw5-z6-GhM" customClass="ActionsViewController" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Wd-UT-UzI">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="761"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="621"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="ouM-ig-znZ">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="621"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Fw5-z6-GhM" id="oPf-1o-8vK"/>
+                                    <outlet property="delegate" destination="Fw5-z6-GhM" id="Twd-ao-P7g"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Agt-mD-JVU"/>
                         <color key="backgroundColor" red="0.10980392156862745" green="0.10980392156862745" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ouM-ig-znZ" firstAttribute="top" secondItem="Agt-mD-JVU" secondAttribute="top" id="CKf-q2-pLJ"/>
+                            <constraint firstItem="ouM-ig-znZ" firstAttribute="centerX" secondItem="7Wd-UT-UzI" secondAttribute="centerX" id="EnB-sK-01x"/>
+                            <constraint firstItem="ouM-ig-znZ" firstAttribute="leading" secondItem="Agt-mD-JVU" secondAttribute="leading" id="Pnh-ca-ENm"/>
+                            <constraint firstItem="ouM-ig-znZ" firstAttribute="bottom" secondItem="Agt-mD-JVU" secondAttribute="bottom" id="YTi-R7-kFx"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" selectedImage="heart.fill" id="Not-2b-0DN"/>
+                    <navigationItem key="navigationItem" title="Действия" largeTitleDisplayMode="always" id="35e-Dc-HdX"/>
+                    <connections>
+                        <outlet property="tableView" destination="ouM-ig-znZ" id="tn6-7K-TcB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0U1-Yo-qVE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3221" y="137"/>
+            <point key="canvasLocation" x="6716.9230769230771" y="963.27014218009469"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="D2q-qg-bpm">
@@ -162,7 +183,7 @@
                         <segue destination="9fg-yd-Fs4" kind="relationship" relationship="viewControllers" id="ZDg-eb-zj6"/>
                         <segue destination="G3F-s3-laC" kind="relationship" relationship="viewControllers" id="493-GN-uyh"/>
                         <segue destination="4ve-Zj-vgL" kind="relationship" relationship="viewControllers" id="gac-d5-lha"/>
-                        <segue destination="Fw5-z6-GhM" kind="relationship" relationship="viewControllers" id="arr-Mg-4Ul"/>
+                        <segue destination="L1i-Fr-YKS" kind="relationship" relationship="viewControllers" id="arr-Mg-4Ul"/>
                         <segue destination="3ZT-RF-fHo" kind="relationship" relationship="viewControllers" id="RbQ-my-j7f"/>
                     </connections>
                 </tabBarController>
@@ -194,6 +215,25 @@
             </objects>
             <point key="canvasLocation" x="1069.5652173913045" y="840.40178571428567"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8L5-WQ-cwm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L1i-Fr-YKS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" selectedImage="heart.fill" id="Not-2b-0DN"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" largeTitles="YES" id="4Ak-XA-kOV">
+                        <rect key="frame" x="0.0" y="44" width="390" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Fw5-z6-GhM" kind="relationship" relationship="rootViewController" id="rcr-58-XfF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JG4-rb-4hb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5787.6923076923076" y="962.55924170616106"/>
+        </scene>
     </scenes>
     <resources>
         <image name="heart" catalog="system" width="128" height="109"/>
@@ -207,5 +247,8 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus.app" catalog="system" width="128" height="114"/>
         <image name="plus.app.fill" catalog="system" width="128" height="114"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
